--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ uwsgi = "^2.0.18"
 whitenoise = "^6.0.0"
 djangorestframework-simplejwt = "^5.1.0"
 drf-spectacular = "^0.22.0"
+pylint = "^2.15.10"
 
 [tool.poetry.dev-dependencies]
 factory-boy = "^3.2.1"
