update config circleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - pre-install-steps: 
-        - "poetry lock [--no-update]"
+        - "poetry lock --no-update"
       - python/install-packages:
           pkg-manager: poetry
       - run:
