--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pytest = "^7.0.1"
 pytest-django = "^4.5.2"
 pytest-factoryboy = "^2.1.0"
 pytest-xdist = "^2.5.0"
+python-dotenv = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
